--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #121212;
-    /* Fundo escuro */
     color: #ffffff;
-    /* Texto claro */
     padding: 20px;
     margin: 0;
 }
@@ -16,96 +14,63 @@ body {
 .header h1 {
     font-size: 48px;
     color: #e91e63;
-    /* Rosa vibrante */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .header .underline {
     border-top: 2px solid #e91e63;
-    /* Linha embaixo */
     width: 80%;
-    /* Largura da linha */
     margin: 10px auto;
-    /* Centraliza a linha */
 }
 
 .date-card {
     position: fixed;
-    /* Fixa o cartão na tela */
     top: 70px;
-    /* Abaixo da aba */
     right: 20px;
-    /* Margem direita */
     background: #1a73e8;
-    /* Azul */
     color: #ffffff;
-    /* Texto branco */
     padding: 20px;
-    /* Espaçamento interno */
     border-radius: 12px;
-    /* Bordas arredondadas */
     text-align: center;
-    /* Centraliza o texto */
     font-size: 20px;
-    /* Tamanho da fonte */
     width: 120px;
-    /* Largura do cartão */
     height: 100px;
-    /* Altura do cartão */
     display: flex;
-    /* Usar flexbox para layout */
     flex-direction: column;
-    /* Alinha os itens em coluna */
     justify-content: center;
-    /* Centraliza verticalmente */
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-    /* Sombra para profundidade */
 }
 
-h2 {
+.date-card h2 {
     font-size: 28px;
     margin: 15px 0;
     color: #ffffff;
-    /* Texto claro */
 }
 
 .ajuda-button {
     background-color: #28a745;
-    /* Cor de fundo do botão */
     color: white;
-    /* Cor do texto */
     border: none;
-    /* Sem borda */
     border-radius: 5px;
-    /* Cantos arredondados */
     padding: 10px 20px;
-    /* Espaçamento interno */
     font-size: 20px;
-    /* Tamanho da fonte */
     cursor: pointer;
-    /* Cursor de mão ao passar o mouse */
     transition: background-color 0.3s, transform 0.2s;
-    /* Transições suaves */
     margin-top: 10px;
-    /* Espaçamento acima do botão */
 }
 
 .ajuda-button:hover {
     background-color: #218838;
-    /* Cor ao passar o mouse */
     transform: scale(1.05);
-    /* Efeito de zoom ao passar o mouse */
 }
 
 .admin-container {
     margin-bottom: 20px;
     text-align: center;
     background: #1e1e1e;
-    /* Fundo mais claro */
     padding: 20px;
     border-radius: 12px;
     color: #1a73e8;
-    /* Azul */
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     width: 100%;
     max-width: 400px;
@@ -118,7 +83,6 @@ h2 {
     object-fit: cover;
     margin-bottom: 10px;
     border: 4px solid #1a73e8;
-    /* Borda azul */
 }
 
 .container {
@@ -126,22 +90,22 @@ h2 {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     max-width: 800px;
-    margin: 20px auto; /* Espaçamento ao redor do container */
-    position: relative; /* Para controle de sobreposição */
-    z-index: 1; /* Coloca o container acima dos outros elementos, mas abaixo dos overlays */
-    overflow: hidden; /* Garante que nada ultrapasse os limites */
+    margin: 20px auto;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
 
 .dupla {
-    background: #1e1e1e; /* Fundo dos cards */
+    background: #1e1e1e;
     border-radius: 12px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     padding: 20px;
     transition: transform 0.3s, box-shadow 0.3s;
-    overflow: hidden; /* Garante que nada ultrapasse os limites */
-    z-index: 0; /* Mantém os cards atrás dos overlays */
+    overflow: hidden;
+    z-index: 0;
 }
 
 .card {
@@ -149,27 +113,20 @@ h2 {
     flex: 1;
     transition: transform 0.3s, box-shadow 0.3s;
     position: relative;
-    z-index: 0; /* Mantém os cards atrás dos overlays */
+    z-index: 0;
 }
-
 
 .card img {
     border-radius: 50%;
-    /* Borda arredondada para a imagem */
     width: 80px;
-    /* Largura fixa */
     height: 80px;
-    /* Altura fixa */
     object-fit: cover;
-    /* Preenchimento da imagem */
     margin-bottom: 10px;
 }
 
 .card:hover {
     transform: scale(1.1);
-    /* Zoom no card */
     box-shadow: 0 8px 40px rgba(0, 0, 0, 0.7);
-    /* Sombra mais forte ao passar o mouse */
 }
 
 .icon {
@@ -181,52 +138,39 @@ h2 {
 
 .partido-icon {
     width: 40px;
-    /* Largura do ícone */
     height: 40px;
-    /* Altura do ícone */
 }
 
 .mensagem {
     margin-top: 20px;
     font-size: 20px;
-    /* Tamanho do texto */
     text-align: center;
-    /* Centraliza o texto */
     color: #ff5722;
-    /* Laranja */
     animation: fadeIn 1s ease-in-out;
-    /* Animação de fade in */
 }
 
 .link-nome {
     color: #1a73e8;
-    /* Azul */
     text-decoration: none;
-    /* Remove sublinhado */
     font-weight: bold;
-    /* Texto em negrito */
 }
 
 .link-nome:hover {
     text-decoration: underline;
-    /* Adiciona sublinhado no hover */
 }
 
 @keyframes fadeIn {
     from {
         opacity: 0;
-        /* Opacidade inicial */
     }
 
     to {
         opacity: 1;
-        /* Opacidade final */
     }
 }
 
 .pulse {
     animation: pulse-animation 1s infinite;
-    /* Animação de pulsação */
 }
 
 @keyframes pulse-animation {
@@ -234,195 +178,121 @@ h2 {
     0%,
     100% {
         transform: scale(1);
-        /* Estado inicial e final */
     }
 
     50% {
         transform: scale(1.1);
-        /* Estado no meio da animação */
     }
 }
 
-/* Estilo para os cards dos mapas */
 .map-card {
     background: #1e1e1e;
-    /* Fundo dos cards */
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-    /* Sombra dos cards */
     text-align: center;
-    /* Centraliza o texto */
     padding: 10px;
-    /* Espaçamento interno */
     width: 125px;
-    /* Largura do card */
     margin: 10px;
-    /* Margem ao redor do card */
     border-radius: 8px;
-    /* Bordas arredondadas */
     transition: transform 0.3s;
-    /* Transição suave */
 }
 
 .map-card:hover {
     transform: scale(1.05);
-    /* Efeito de zoom ao passar o mouse */
 }
 
 .map-card img {
     border-radius: 8px;
-    /* Borda arredondada para a imagem */
     width: 100%;
-    /* Largura do card */
     height: auto;
-    /* Altura automática */
 }
 
 .map-title {
     margin-top: 10px;
-    /* Espaçamento acima do título */
     font-weight: bold;
-    /* Texto em negrito */
 }
 
-/* Widget de Arrecadação */
 .overlay {
     position: fixed;
-    /* Fixa a overlay na tela */
     top: 0;
-    /* Alinha ao topo */
     left: 0;
-    /* Alinha à esquerda */
     width: 100%;
-    /* Largura total */
     height: 100%;
-    /* Altura total */
     background: rgba(0, 0, 0, 0.7);
-    /* Fundo escuro com opacidade */
     display: none;
-    /* Oculta por padrão */
     z-index: 999;
-    /* Acima do conteúdo */
 }
 
 .widget-container {
     display: none;
-    /* Inicialmente oculto */
     background-color: #1e1e1e;
-    /* Cor de fundo do widget */
     border: 2px solid #444;
-    /* Borda mais escura */
     border-radius: 15px;
-    /* Bordas arredondadas */
     padding: 20px;
-    /* Espaçamento interno */
     width: 300px;
-    /* Largura do widget */
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    /* Sombra */
     text-align: center;
-    /* Centraliza o texto */
     position: fixed;
-    /* Fixa o widget na tela */
     top: 50%;
-    /* Centraliza verticalmente */
     left: 50%;
-    /* Centraliza horizontalmente */
     transform: translate(-50%, -50%);
-    /* Move o widget para o centro */
     z-index: 1000;
-    /* Garante que fique acima de outros elementos */
 }
 
 .widget-container h2 {
     font-size: 1.5em;
-    /* Tamanho do título */
     color: #fff;
-    /* Cor do título */
     margin-bottom: 15px;
-    /* Margem abaixo do título */
 }
 
 .pix {
     font-weight: bold;
-    /* Texto em negrito */
     color: #28a745;
-    /* Cor verde */
     font-size: 1.2em;
-    /* Tamanho do texto */
 }
 
 .valor-arrecadado {
     margin-top: 15px;
-    /* Margem acima do valor */
     font-size: 2em;
-    /* Tamanho maior */
     font-weight: bold;
-    /* Texto em negrito */
     color: #fff;
-    /* Cor do valor */
     background-color: #28a745;
-    /* Fundo verde */
     padding: 10px;
-    /* Espaçamento interno */
     border-radius: 10px;
-    /* Cantos arredondados */
     border: 2px solid #1e7e34;
-    /* Borda mais escura */
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-    /* Sombra */
     transition: transform 0.2s;
-    /* Transição suave */
 }
 
 .valor-arrecadado:hover {
     transform: scale(1.05);
-    /* Efeito de zoom ao passar o mouse */
 }
 
 .descricao {
     font-size: 0.95em;
-    /* Tamanho da descrição */
     color: #ccc;
-    /* Cor da descrição */
     margin-bottom: 10px;
-    /* Margem abaixo da descrição */
 }
 
 .button {
     display: inline-block;
-    /* Exibe como bloco inline */
     background-color: #28a745;
-    /* Cor do botão */
     color: #fff;
-    /* Cor do texto */
     padding: 10px 20px;
-    /* Espaçamento interno */
     text-decoration: none;
-    /* Remove sublinhado */
     border-radius: 5px;
-    /* Cantos arredondados */
     margin-top: 15px;
-    /* Margem acima do botão */
     font-size: 1em;
-    /* Tamanho do texto */
     transition: background-color 0.3s ease;
-    /* Transição suave */
     cursor: pointer;
-    /* Cursor de mão ao passar o mouse */
 }
 
 .button:hover {
     background-color: #218838;
-    /* Cor do botão ao passar o mouse */
 }
 
 .copy-message {
     margin-top: 10px;
-    /* Margem acima da mensagem */
     font-size: 0.9em;
-    /* Tamanho da mensagem */
     color: #28a745;
-    /* Cor da mensagem */
     display: none;
-    /* Oculta por padrão */
 }
